--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A Template for WordPress Gutenberg Block.",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline --watch-content-base --content-base dist/ --open-page index.html",
+    "start": "webpack-dev-server",
     "watch": "webpack -w",
     "build": "NODE_ENV=production webpack"
   },
@@ -17,10 +17,10 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "glob": "^7.1.3",
-    "uglifyjs-webpack-plugin": "^2.1.2",
     "webpack": "^4.30.0"
   },
   "devDependencies": {
+    "terser-webpack-plugin": "^1.3.0",
     "webpack-cli": "^3.3.1",
     "webpack-dev-server": "^3.3.1"
   }
